disable fossa and ossf-scorecard on contributor repos

--- a/.github/workflows/ossf-scorecard.yml
+++ b/.github/workflows/ossf-scorecard.yml
@@ -12,6 +12,7 @@ permissions: read-all
 
 jobs:
   analysis:
+    if: github.repository == 'open-telemetry/opentelemetry-network-build-tools'
     runs-on: ubuntu-latest
     permissions:
       # Needed for Code scanning upload
