set clang-tidy and clang-format to version 16

--- a/base/Dockerfile
+++ b/base/Dockerfile
@@ -19,7 +19,7 @@ ARG PKG_CORE="wget curl git gnupg bc aptitude netcat-openbsd sudo"
 ARG PKG_TEXT="xxd sed ripgrep less jq"
 ARG PKG_COMPILERS="g++"
 ARG PKG_BUILD="ninja-build"
-ARG PKG_LINTERS="clang-format clang-tidy shellcheck"
+ARG PKG_LINTERS="clang-format-16 clang-tidy-16 shellcheck"
 ARG PKG_MANAGERS="pkg-config rpm"
 ARG PKG_KERNEL="dkms build-essential"
 ARG PKG_DEV="gdb cgdb tmux strace"
