--- a/.github/workflows/build_and_push_parallel.yml
+++ b/.github/workflows/build_and_push_parallel.yml
@@ -5,6 +5,9 @@ name: build-and-push-parallel
 run-name: Create a build-env container and push to docker hub
 
 on:
+  push:
+    branches:
+      - main
   workflow_dispatch:
     inputs:
       ref:
@@ -44,13 +47,15 @@ permissions:
 env:
   CACHE_REGISTRY: ghcr.io
   FINAL_REGISTRY: docker.io
-  IMAGE_PREFIX: ${{ inputs.image_prefix }}
+  IMAGE_PREFIX: ${{ inputs.image_prefix || 'opentelemetry-network-' }}
   DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
   DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
-  DOCKER_NAMESPACE: ${{ inputs.registry_workspace }}
+  DOCKER_NAMESPACE: ${{ inputs.registry_workspace || 'otel' }}
+  DRY_RUN: ${{ github.event_name != 'workflow_dispatch' || inputs.dry_run }}
+  REF: ${{ inputs.ref || github.ref }}
+  FORCE_REBUILD: ${{ inputs.force_rebuild || false }}
 
 jobs:
-  # Base layer - no dependencies
   build-base:
     name: Build base image
     runs-on: ubuntu-24.04
@@ -58,7 +63,7 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
         with:
-          ref: ${{ inputs.ref }}
+          ref: ${{ env.REF }}
 
       - name: Build and push base image
         uses: ./.github/actions/build-push-container//
@@ -67,29 +72,8 @@ jobs:
           registry: ${{ env.CACHE_REGISTRY }}
           registry_username: ${{ github.actor }}
           registry_password: ${{ secrets.GITHUB_TOKEN }}
-          ref: ${{ inputs.ref }}
-          force_rebuild: ${{ inputs.force_rebuild }}
-
-  # Second layer - depends on base
-  build-openssl:
-    name: Build openssl image
-    runs-on: ubuntu-24.04
-    needs: build-base
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
-        with:
-          ref: ${{ inputs.ref }}
-
-      - name: Build and push openssl image
-        uses: ./.github/actions/build-push-container/
-        with:
-          directory: openssl
-          registry: ${{ env.CACHE_REGISTRY }}
-          registry_username: ${{ github.actor }}
-          registry_password: ${{ secrets.GITHUB_TOKEN }}
-          ref: ${{ inputs.ref }}
-          force_rebuild: ${{ inputs.force_rebuild }}
+          ref: ${{ env.REF }}
+          force_rebuild: ${{ env.FORCE_REBUILD }}
 
   build-bcc:
     name: Build bcc image
@@ -99,7 +83,7 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
         with:
-          ref: ${{ inputs.ref }}
+          ref: ${{ env.REF }}
 
       - name: Build and push bcc image
         uses: ./.github/actions/build-push-container/
@@ -108,8 +92,8 @@ jobs:
           registry: ${{ env.CACHE_REGISTRY }}
           registry_username: ${{ github.actor }}
           registry_password: ${{ secrets.GITHUB_TOKEN }}
-          ref: ${{ inputs.ref }}
-          force_rebuild: ${{ inputs.force_rebuild }}
+          ref: ${{ env.REF }}
+          force_rebuild: ${{ env.FORCE_REBUILD }}
 
   build-libuv:
     name: Build libuv image
@@ -119,7 +103,7 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
         with:
-          ref: ${{ inputs.ref }}
+          ref: ${{ env.REF }}
 
       - name: Build and push libuv image
         uses: ./.github/actions/build-push-container/
@@ -128,8 +112,8 @@ jobs:
           registry: ${{ env.CACHE_REGISTRY }}
           registry_username: ${{ github.actor }}
           registry_password: ${{ secrets.GITHUB_TOKEN }}
-          ref: ${{ inputs.ref }}
-          force_rebuild: ${{ inputs.force_rebuild }}
+          ref: ${{ env.REF }}
+          force_rebuild: ${{ env.FORCE_REBUILD }}
 
   build-cpp-misc:
     name: Build cpp_misc image
@@ -139,7 +123,7 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
         with:
-          ref: ${{ inputs.ref }}
+          ref: ${{ env.REF }}
 
       - name: Build and push cpp_misc image
         uses: ./.github/actions/build-push-container/
@@ -148,8 +132,8 @@ jobs:
           registry: ${{ env.CACHE_REGISTRY }}
           registry_username: ${{ github.actor }}
           registry_password: ${{ secrets.GITHUB_TOKEN }}
-          ref: ${{ inputs.ref }}
-          force_rebuild: ${{ inputs.force_rebuild }}
+          ref: ${{ env.REF }}
+          force_rebuild: ${{ env.FORCE_REBUILD }}
 
   build-go:
     name: Build go image
@@ -159,7 +143,7 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
         with:
-          ref: ${{ inputs.ref }}
+          ref: ${{ env.REF }}
 
       - name: Build and push go image
         uses: ./.github/actions/build-push-container/
@@ -168,28 +152,8 @@ jobs:
           registry: ${{ env.CACHE_REGISTRY }}
           registry_username: ${{ github.actor }}
           registry_password: ${{ secrets.GITHUB_TOKEN }}
-          ref: ${{ inputs.ref }}
-          force_rebuild: ${{ inputs.force_rebuild }}
-
-  build-abseil-cpp:
-    name: Build abseil_cpp image
-    runs-on: ubuntu-24.04
-    needs: build-base
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
-        with:
-          ref: ${{ inputs.ref }}
-
-      - name: Build and push abseil_cpp image
-        uses: ./.github/actions/build-push-container/
-        with:
-          directory: abseil_cpp
-          registry: ${{ env.CACHE_REGISTRY }}
-          registry_username: ${{ github.actor }}
-          registry_password: ${{ secrets.GITHUB_TOKEN }}
-          ref: ${{ inputs.ref }}
-          force_rebuild: ${{ inputs.force_rebuild }}
+          ref: ${{ env.REF }}
+          force_rebuild: ${{ env.FORCE_REBUILD }}
 
   build-libmaxminddb:
     name: Build libmaxminddb image
@@ -199,7 +163,7 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
         with:
-          ref: ${{ inputs.ref }}
+          ref: ${{ env.REF }}
 
       - name: Build and push libmaxminddb image
         uses: ./.github/actions/build-push-container/
@@ -208,8 +172,8 @@ jobs:
           registry: ${{ env.CACHE_REGISTRY }}
           registry_username: ${{ github.actor }}
           registry_password: ${{ secrets.GITHUB_TOKEN }}
-          ref: ${{ inputs.ref }}
-          force_rebuild: ${{ inputs.force_rebuild }}
+          ref: ${{ env.REF }}
+          force_rebuild: ${{ env.FORCE_REBUILD }}
 
   build-libbpf:
     name: Build libbpf image
@@ -219,7 +183,7 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
         with:
-          ref: ${{ inputs.ref }}
+          ref: ${{ env.REF }}
 
       - name: Build and push libbpf image
         uses: ./.github/actions/build-push-container/
@@ -228,61 +192,18 @@ jobs:
           registry: ${{ env.CACHE_REGISTRY }}
           registry_username: ${{ github.actor }}
           registry_password: ${{ secrets.GITHUB_TOKEN }}
-          ref: ${{ inputs.ref }}
-          force_rebuild: ${{ inputs.force_rebuild }}
+          ref: ${{ env.REF }}
+          force_rebuild: ${{ env.FORCE_REBUILD }}
 
-  # Third layer - depends on base + openssl
-  build-curl:
-    name: Build curl image
-    runs-on: ubuntu-24.04
-    needs: [build-base, build-openssl]
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
-        with:
-          ref: ${{ inputs.ref }}
-
-      - name: Build and push curl image
-        uses: ./.github/actions/build-push-container/
-        with:
-          directory: curl
-          registry: ${{ env.CACHE_REGISTRY }}
-          registry_username: ${{ github.actor }}
-          registry_password: ${{ secrets.GITHUB_TOKEN }}
-          ref: ${{ inputs.ref }}
-          force_rebuild: ${{ inputs.force_rebuild }}
-
-  # Fourth layer - depends on base + abseil_cpp + openssl
-  build-grpc-cpp:
-    name: Build grpc_cpp image
-    runs-on: ubuntu-24.04
-    needs: [build-base, build-abseil-cpp, build-openssl]
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
-        with:
-          ref: ${{ inputs.ref }}
-
-      - name: Build and push grpc_cpp image
-        uses: ./.github/actions/build-push-container/
-        with:
-          directory: grpc_cpp
-          registry: ${{ env.CACHE_REGISTRY }}
-          registry_username: ${{ github.actor }}
-          registry_password: ${{ secrets.GITHUB_TOKEN }}
-          ref: ${{ inputs.ref }}
-          force_rebuild: ${{ inputs.force_rebuild }}
-
-  # Fifth layer - depends on base + openssl + curl
   build-aws-sdk:
     name: Build aws_sdk image
     runs-on: ubuntu-24.04
-    needs: [build-base, build-openssl, build-curl]
+    needs: [build-base]
     steps:
       - name: Checkout repository
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
         with:
-          ref: ${{ inputs.ref }}
+          ref: ${{ env.REF }}
 
       - name: Build and push aws_sdk image
         uses: ./.github/actions/build-push-container/
@@ -291,19 +212,18 @@ jobs:
           registry: ${{ env.CACHE_REGISTRY }}
           registry_username: ${{ github.actor }}
           registry_password: ${{ secrets.GITHUB_TOKEN }}
-          ref: ${{ inputs.ref }}
-          force_rebuild: ${{ inputs.force_rebuild }}
+          ref: ${{ env.REF }}
+          force_rebuild: ${{ env.FORCE_REBUILD }}
 
-  # Sixth layer - depends on base + openssl + curl + grpc_cpp
   build-gcp-cpp:
     name: Build gcp_cpp image
     runs-on: ubuntu-24.04
-    needs: [build-base, build-openssl, build-curl, build-grpc-cpp]
+    needs: [build-base]
     steps:
       - name: Checkout repository
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
         with:
-          ref: ${{ inputs.ref }}
+          ref: ${{ env.REF }}
 
       - name: Build and push gcp_cpp image
         uses: ./.github/actions/build-push-container/
@@ -312,19 +232,18 @@ jobs:
           registry: ${{ env.CACHE_REGISTRY }}
           registry_username: ${{ github.actor }}
           registry_password: ${{ secrets.GITHUB_TOKEN }}
-          ref: ${{ inputs.ref }}
-          force_rebuild: ${{ inputs.force_rebuild }}
+          ref: ${{ env.REF }}
+          force_rebuild: ${{ env.FORCE_REBUILD }}
 
-  # Seventh layer - depends on base + grpc_cpp
   build-opentelemetry:
     name: Build opentelemetry image
     runs-on: ubuntu-24.04
-    needs: [build-base, build-grpc-cpp]
+    needs: [build-base]
     steps:
       - name: Checkout repository
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
         with:
-          ref: ${{ inputs.ref }}
+          ref: ${{ env.REF }}
 
       - name: Build and push opentelemetry image
         uses: ./.github/actions/build-push-container/
@@ -333,24 +252,19 @@ jobs:
           registry: ${{ env.CACHE_REGISTRY }}
           registry_username: ${{ github.actor }}
           registry_password: ${{ secrets.GITHUB_TOKEN }}
-          ref: ${{ inputs.ref }}
-          force_rebuild: ${{ inputs.force_rebuild }}
+          ref: ${{ env.REF }}
+          force_rebuild: ${{ env.FORCE_REBUILD }}
 
-  # Final layer - depends on all previous layers
   build-final:
     name: Build final image
     runs-on: ubuntu-24.04
     needs: [
       build-base,
-      build-openssl,
-      build-curl,
       build-bcc,
       build-libuv,
       build-aws-sdk,
       build-cpp-misc,
       build-go,
-      build-grpc-cpp,
-      build-abseil-cpp,
       build-libmaxminddb,
       build-gcp-cpp,
       build-opentelemetry,
@@ -363,7 +277,7 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
         with:
-          ref: ${{ inputs.ref }}
+          ref: ${{ env.REF }}
 
       - name: Build and push final image to cache registry
         id: build
@@ -373,8 +287,8 @@ jobs:
           registry: ${{ env.CACHE_REGISTRY }}
           registry_username: ${{ github.actor }}
           registry_password: ${{ secrets.GITHUB_TOKEN }}
-          ref: ${{ inputs.ref }}
-          force_rebuild: ${{ inputs.force_rebuild }}
+          ref: ${{ env.REF }}
+          force_rebuild: ${{ env.FORCE_REBUILD }}
 
   # Push final image to docker.io with proper tags
   push-to-dockerhub:
@@ -385,7 +299,7 @@ jobs:
       - name: Checkout sources
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
         with:
-          ref: ${{ inputs.ref }}
+          ref: ${{ env.REF }}
           fetch-depth: 0
 
       - name: Log in to GitHub Container Registry
@@ -424,14 +338,14 @@ jobs:
           fi
           
           # Set up image name and path for Docker Hub
-          image_name="${{ inputs.image_prefix }}build-tools"
+          image_name="${{ env.IMAGE_PREFIX }}build-tools"
           docker_registry=$(sed -e 's,^https://,,' -e 's,/*$,,' <<< ${{ env.FINAL_REGISTRY }})
           image_path="${docker_registry}/${{ env.DOCKER_NAMESPACE }}/${image_name}"
           
           # Tag and push to Docker Hub
           for tag in ${tags[@]}; do
             docker tag "${CACHE_IMAGE}" "${image_path}:${tag}"
-            if [[ "${{ inputs.dry_run }}" == "false" ]]; then
+            if [[ "${{ env.DRY_RUN }}" == "false" ]]; then
               docker push "${image_path}:${tag}"
               echo "Pushed ${image_path}:${tag}"
             else
