--- a/aws_sdk/Dockerfile
+++ b/aws_sdk/Dockerfile
@@ -3,23 +3,16 @@
 
 # AWS SDK
 
-ARG openssl_IMAGE_TAG
-ARG curl_IMAGE_TAG
 ARG base_IMAGE_TAG
 ARG CMAKE_BUILD_TYPE
 
-FROM $openssl_IMAGE_TAG as build-openssl
-FROM $curl_IMAGE_TAG as build-curl
-FROM $base_IMAGE_TAG
+FROM $base_IMAGE_TAG AS build
 
 ARG NPROC
 
 WORKDIR $HOME
 
-COPY aws-sdk-cpp aws-sdk-cpp
-
-COPY --from=build-curl $HOME/install $HOME/curl
-COPY --from=build-openssl $HOME/install/openssl $HOME/openssl
+COPY --chown=${UID}:${GID} aws-sdk-cpp aws-sdk-cpp
 
 WORKDIR $HOME/build/aws-sdk-cpp
 
@@ -30,11 +23,13 @@ RUN cmake \
   -DFORCE_CURL=ON \
   -DUSE_OPENSSL=ON \
   -DENABLE_TESTING=OFF \
-  -DOPENSSL_ROOT_DIR:PATH=$HOME/openssl \
-  -DCMAKE_PREFIX_PATH="$HOME/curl" \
   -DCMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE} \
   -DCMAKE_INSTALL_PREFIX:PATH=$HOME/install \
   $HOME/aws-sdk-cpp
 
 RUN nice make -j${NPROC:-3}
 RUN nice make install
+
+# Runtime stage - copy only necessary artifacts
+FROM $base_IMAGE_TAG
+COPY --from=build $HOME/install $HOME/install
